# rust-socket

./: .gitignore  Cargo.toml  application.yml  main-socket.rs
src/: main.rs
src/config/: context.rs  initializer.rs  logger.rs  mod.rs  redis_client.rs  scheduler.rs  socket_server.rs
src/domain/dto/: mod.rs  socket_client_info.rs
src/service/: message_service.rs
src/util/: mod.rs
