[package]
name = "rust-socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0"
async-std = "1.12.0"
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3.4"
rand = "0.8.5"
